# simple-mvc

./: CMakeLists.txt  DataHandler.hpp  LICENSE  MVC-Example.cpp  README.md
controller/: ControllerFactory.hhp  ControllerHandler.cpp  ControllerHandler.hh  IBaseController.hh  IControllerFactory.hh  StudentController.cpp  StudentController.hh
event/: EventObserver.cpp  EventObserver.hh  IEventObserver.hh
model/: ABaseModel.cpp  ABaseModel.hh  ModelHandler.cpp  ModelHandler.hh  StudentModel.cpp  StudentModel.hh
pattern/: Observator.hpp
view/: ABaseView.cpp  ABaseView.hh  StudentView.cpp  StudentView.hh  StudentViewTwo.cpp  StudentViewTwo.hh  ViewHandler.cpp  ViewHandler.hh
